ec2.tf
##################################################################################
# VARIABLES
##################################################################################

variable "aws_access_key" {}
variable "aws_secret_key" {}
variable "private_key_path" {}
variable "key_name" {
  default = "terraform"
}
variable "instance_type" {
  default = "t2.micro"
}

#variable "environment_name" {
#  default = "Dev"
#}

##################################################################################
# PROVIDERS
##################################################################################

provider "aws" {
  access_key = "${var.aws_access_key}"
  secret_key = "${var.aws_secret_key}"
  region     = "us-east-1"
}

######################  ############################################################
# RESOURCES
##################################################################################



resource "aws_instance" "nginx" {
  ami           = "ami-c58c1dd3"
  instance_type = "${var.instance_type}"
  #key_name        = "${var.key_name}"

  connection {
    user        = "ec2-user"
    #private_key = "${file(var.private_key_path)}"
  }
#provisioner "remote-exec" {
  #  inline = [
  #    "sudo yum install nginx -y",
  #    "sudo service nginx start"
  #  ]
  #}
}

##################################################################################
# OUTPUT
##################################################################################

output "aws_instance_public_dns" {
    value = "${aws_instance.nginx.public_dns}"
}
